--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,7 +5,7 @@ RUN mkdir -p /srv/app/fr-shohin-admin-client
 WORKDIR /srv/app/fr-shohin-admin-client
 
 COPY package.json /srv/app/fr-shohin-admin-client
-COPY package.lock.json /srv/app/fr-shohin-admin-client
+COPY package-lock.json /srv/app/fr-shohin-admin-client
 
 RUN npm install
 COPY . /srv/app/fr-shohin-admin-client
